@@ -1,3 +1,7 @@
+2014-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* paper-size.c, data/paper.cfg: Allow comments in config file.
+
 2014-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* paper-size.c, data/paper.cfg: Modify and document the config
